# calculateVelocity

./: CMakeLists.txt  main.cpp  velocityCalculator.cpp  velocityCalculator.h
